fix wrap in header and logo

--- a/src/styles/header/index.module.scss
+++ b/src/styles/header/index.module.scss
@@ -17,6 +17,7 @@
 
     li {
       padding-right: 32px;
+      text-wrap: nowrap;
     }
   }
 
